<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/primary_material_light">
            <LinearLayout
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/p50dp"
                android:background="?attr/colorPrimary"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <ImageView
                    android:id="@+id/im_back"
                    android:layout_width="@dimen/p50dp"
                    android:layout_height="@dimen/p50dp"
                    android:src="@drawable/back_white"
                    android:padding="@dimen/p17dp"/>
                <TextView
                    android:id="@+id/tv_name_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="Detail"
                    android:textSize="@dimen/size_text_18sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="@dimen/p20dp"/>
            </LinearLayout>
            <ImageView
                android:id="@+id/im_cover"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:src="@drawable/ic_cover"
                android:scaleType="centerCrop"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@color/white">
                <ImageView
                    android:layout_marginLeft="@dimen/p10dp"
                    android:layout_width="@dimen/p20dp"
                    android:layout_height="@dimen/p20dp"
                    android:src="@drawable/img_checked"/>
                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Take"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/p10dp"
                    android:layout_marginBottom="@dimen/p10dp"
                    android:layout_marginLeft="@dimen/p10dp"
                    android:textSize="@dimen/size_text_16sp"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/grey"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/grey"
                android:layout_marginTop="@dimen/p10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5"
                android:background="@color/white">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/p5dp"
                    android:layout_marginBottom="@dimen/p5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="8.5"
                        android:id="@+id/tv_p_serve"
                        style="@style/tvScore"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/p_serve"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/p5dp"
                    android:layout_marginBottom="@dimen/p5dp">
                    <TextView
                        android:id="@+id/tv_p_quality"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="8.5"
                        style="@style/tvScore"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/p_quality"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/p5dp"
                    android:layout_marginBottom="@dimen/p5dp">
                    <TextView
                        android:id="@+id/tv_p_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="8.5"
                        style="@style/tvScore"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/p_location"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/p5dp"
                    android:layout_marginBottom="@dimen/p5dp">
                    <TextView
                        android:id="@+id/tv_p_space"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="8.5"
                        style="@style/tvScore"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/p_space"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/p5dp"
                    android:layout_marginBottom="@dimen/p5dp">
                    <TextView
                        android:id="@+id/tv_p_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="8.5"
                        style="@style/tvScore"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/p_cost"/>
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/grey"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/grey"
                android:layout_marginTop="@dimen/p10dp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@color/white">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_toLeftOf="@+id/im_location">
                    <TextView
                        android:id="@+id/tv_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/p_closed"
                        android:textColor="@color/red"
                        android:textStyle="bold"
                        android:layout_marginTop="@dimen/p10dp"/>
                    <TextView
                        android:id="@+id/tv_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="08:00 AM - 0:00 PM"
                        android:layout_marginBottom="@dimen/p10dp"/>
                </LinearLayout>
                <ImageView
                    android:id="@+id/im_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/location"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/p10dp"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/grey"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/grey"
                android:layout_marginTop="@dimen/p10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="@dimen/p10dp"
                    android:layout_marginTop="@dimen/p10dp">
                    <ImageView
                        android:layout_width="@dimen/p20dp"
                        android:layout_height="@dimen/p20dp"
                        android:src="@drawable/ic_phone_tablet"/>
                    <TextView
                        android:id="@+id/tv_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="401 Xuân đỉnh - Từ Liêm - Hà Nội"
                        android:layout_marginLeft="@dimen/p10dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="@dimen/p10dp"
                    android:layout_marginTop="@dimen/p10dp">
                    <ImageView
                        android:layout_width="@dimen/p20dp"
                        android:layout_height="@dimen/p20dp"
                        android:src="@drawable/heart_fill"/>
                    <TextView
                        android:id="@+id/tv_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="401 Xuân đỉnh - Từ Liêm - Hà Nội"
                        android:layout_marginLeft="@dimen/p10dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="@dimen/p10dp"
                    android:layout_marginTop="@dimen/p10dp"
                    android:layout_marginBottom="@dimen/p10dp">
                    <ImageView
                        android:layout_width="@dimen/p20dp"
                        android:layout_height="@dimen/p20dp"
                        android:src="@drawable/ic_mail_tablet"/>
                    <TextView
                        android:id="@+id/tv_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="401 Xuân đỉnh - Từ Liêm - Hà Nội"
                        android:layout_marginLeft="@dimen/p10dp"/>
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/grey"/>
            <View
                android:layout_marginTop="@dimen/p10dp"
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/grey"/>
        </LinearLayout>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star_disable"
            android:layout_marginRight="@dimen/fab_margin"
            app:backgroundTint="@color/white"
            android:layout_alignParentRight="true"
            android:layout_marginTop="234dp" />
    </RelativeLayout>
</ScrollView>